Added basic eclipse setup steps to readme